--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
         <button class="fullscreen-btn" aria-label="Fullscreen Globe Map">⤢</button>
         <canvas id="sphereMap"></canvas>
       </div>
+
+      <!-- MOLLWEIDE MAP (NEW) -->
+      <div class="map-container">
+        <h2>Mollweide Projection Map</h2>
+        <button class="fullscreen-btn" aria-label="Fullscreen Mollweide Map">⤢</button>
+        <canvas id="mollweideMap"></canvas>
+      </div>
+
     </section>
   </div>
 
