--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
         <button class="fullscreen-btn" aria-label="Fullscreen Globe Map">⤢</button>
         <canvas id="sphereMap"></canvas>
       </div>
+
+      <!-- Cylindrical Equidistant Map -->
+      <div class="map-container">
+        <h2>Cylindrical Equidistant Map</h2>
+        <button class="fullscreen-btn" aria-label="Fullscreen Cylindrical Map">⤢</button>
+        <canvas id="cylindricalMap"></canvas>
+      </div>
     </section>
   </div>
 
