--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         <canvas id="sphereMap"></canvas>
       </div>
 
-      <!-- Cylindrical Equidistant Map -->
+      <!-- Cylindrical Equidistant Map (2D) -->
       <div class="map-container">
-        <h2>Cylindrical Equidistant Map</h2>
+        <h2>Cylindrical Equidistant Map (2D)</h2>
         <button class="fullscreen-btn" aria-label="Fullscreen Cylindrical Map">⤢</button>
         <canvas id="cylindricalMap"></canvas>
       </div>
