--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
               <label>Ignore this many closest stars: <span id="low-tolerance-value">0</span></label>
               <input type="range" id="low-tolerance-slider" name="low-tolerance" min="0" max="10" value="0" disabled />
             </div>
+            <!-- NEW: Low Density Cluster Labeling & Segmentation toggle -->
+            <div class="filter-item">
+              <input type="checkbox" id="enable-low-density-labeling" name="enable-low-density-labeling" />
+              <label for="enable-low-density-labeling">Enable Low Density Cluster Labeling &amp; Segmentation</label>
+            </div>
           </div>
         </fieldset>
 
@@ -143,6 +148,11 @@
             <div class="filter-item">
               <label>Ignore this many closest stars: <span id="high-tolerance-value">0</span></label>
               <input type="range" id="high-tolerance-slider" name="high-tolerance" min="0" max="10" value="0" disabled />
+            </div>
+            <!-- NEW: High Density Cluster Labeling & Segmentation toggle -->
+            <div class="filter-item">
+              <input type="checkbox" id="enable-high-density-labeling" name="enable-high-density-labeling" />
+              <label for="enable-high-density-labeling">Enable High Density Cluster Labeling &amp; Segmentation</label>
             </div>
           </div>
         </fieldset>
